# GitHub-Profile-Analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml  sandbox.py
src/analyze/: analyzer.py  api.py  models.py
src/tests/: test_analyzer.py  test_api.py
